<resources>
    <string name="app_name">Domotics</string>
    <string name="title_favorites">Accueil</string>
    <string name="title_devices">Appareils</string>
    <string name="title_settings">Réglages</string>
    <string name="title_login">Connexion</string>
    <string name="title_register">Inscription</string>
    <string name="button_connect">Se connecter</string>
    <string name="button_register">S\'inscrire</string>
    <string name="button_logout">Se déconnecter</string>
    <string name="button_remove_user">Expulser</string>
    <string name="button_add_user">Ajouter</string>
</resources>