<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_favorites">

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.persello.domotics.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_devices"
        android:name="com.persello.domotics.ui.devices.DevicesFragment"
        android:label="@string/title_devices"
        tools:layout="@layout/fragment_devices" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.persello.domotics.ui.auth.LoginFragment"
        android:label="@string/title_login" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.persello.domotics.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_register"
        android:name="com.persello.domotics.ui.auth.RegisterFragment"
        android:label="@string/title_register" />
</navigation>